프리미엄 기획전 상품 추가

--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,7 @@
     --sub-color: #F6F1EB;
     --title-color: #ffffff;
     --basic-color: #111111;
+    --sub-basic-color: #ADADAD;
 }
 
 /* 공통 스타일 */
