--- a/css/style.css
+++ b/css/style.css
@@ -151,31 +151,71 @@
   bottom: 2vw;}
 
 .premium_content h3 {
-    font-size: 50px;
-    color: #ffffff;
-    letter-spacing: -0.55px;
-    line-height: 130%;
+  font-size: 50px;
+  color: #ffffff;
+  letter-spacing: -0.55px;
+  line-height: 130%;
 }
 
 .premium_content p {
-    font-size: 35px;
-    font-weight: 500;
-    color: #ffffff;
-    opacity: 0.7;
-    letter-spacing: -0.385px;
-    margin-bottom: 6rem;
+  font-size: 35px;
+  font-weight: 500;
+  color: #ffffff;
+  opacity: 0.7;
+  letter-spacing: -0.385px;
+  margin-bottom: 6rem;
 }
 .premium_tags {
   width:50%;
 }
 
 .tag {
-    background-color: var(--primary-color);
-    border-radius: 30px;
-    padding: 10px 20px;
-    color: #ffffff;
-    font-size: 25px;
-    font-weight: 500;
-    display: inline-block;
-    margin-top: 0.5rem;
+  background-color: var(--primary-color);
+  border-radius: 30px;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: 500;
+  display: inline-block;
+  margin-top: 0.5rem;
+}
+
+/* product */
+
+.premium_prod {
+  margin: 55px auto;
+  max-width: 1450px;
+}
+
+.img {
+  background-image: url(../img/product_bg.jpg);
+  max-width: 300px;
+}
+
+.text {
+  max-width: 300px;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.text h3 {
+  width: 100%;
+}
+
+.prod_name {
+  font-size: 25px;
+  color: var(--basic-color);
+}
+
+.prod_cost {
+  font-size: 20px;
+  color: var(--sub-basic-color);
+  font-weight: 500;
+  text-decoration-line: line-through;
+}
+
+.prod_price {
+  font-size: 25px;
+  color: var(--primary-color);
 }
