--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,10 @@
 }
 
 .img {
-  background-image: url(../img/product_bg.jpg);
-  max-width: 300px;
+  background-color: var(--background-color);
+  width: 300px;
+  height: 300px;
+  position: relative;
 }
 
 .text {
@@ -218,4 +220,33 @@
 .prod_price {
   font-size: 25px;
   color: var(--primary-color);
+}
+
+div.icon {
+  position: absolute;
+  display: flex;
+  gap: 5px;
+  right: 5%;
+  bottom: 5%;
+}
+
+span.icon {
+  width: 55px;
+  height: 55px;
+  padding: 5px 10px;
+  border-radius: 100%;
+  color: var(--title-color);
+  font-size: 15px;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.eco {
+  background-color: var(--sub-green-color);
+}
+
+.sale {
+  background-color: var(--primary-color);
 }
